service-kargo-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: kargo-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kargo-demo
