ingress-kargo-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    spec.ingressClassName: traefik
  name: kargo-demo
spec:
  rules:
  - host: kargo-demo-uat.next.marmalade.co
    http:
      paths:
      - backend:
          service:
            name: kargo-demo
            port:
              number: 80
        path: /
        pathType: Prefix
